--- a/interviews-main/accounts/pom.xml
+++ b/interviews-main/accounts/pom.xml
@@ -85,7 +85,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<!--<plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.7</version>
@@ -104,7 +104,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>-->
+			</plugin>
 		</plugins>
 	</build>
 
