--- a/interviews-main/accounts/src/main/resources/application.properties
+++ b/interviews-main/accounts/src/main/resources/application.properties
@@ -3,6 +3,11 @@ server.port=8100
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.client.enabled=false
 
+spring.security.user.name=ram
+spring.security.user.password=ram
+
+
+
 spring.datasource.url=jdbc:h2:mem:accountsdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
